--- a/main.css
+++ b/main.css
@@ -1,443 +1,185 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&amp;display=swap');
- * {
-    margin: 0;
-}
- ::selection {
-    background-color: #131313c9;
-}
- html {
-    scroll-behavior: smooth;
-}
- body {
-    animation: fadeIn 5s;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&display=swap');
+
+body {
+    background-color: #1b1b1b;
     font-family: 'Montserrat', sans-serif;
-    background-color: #2e2e2e;
-    color: #fff;
-    overflow-x: hidden;
 }
-.top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 83.5vh;
-    width: 100%;
-    overflow: hidden;
-}
- .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 75vh;
-}
- .main h1 {
-    font-size: 7vw;
-    font-weight: 900;
-    text-transform: uppercase;
-    color:#fff;
-    z-index: 1;
-}
- .main h1 span {
-    color:#8B51FE;
-}
- .main p {
-    position: absolute;
-    bottom:51%;
-    font-size: 2vw;
-    font-weight: 500;
-    margin-top: 1vw;
-    color: #fff;
-    z-index: 1;
-}
- a {
-    text-decoration: none;
-}
- .main a {
-    position: absolute;
-}
- #start-button {
-    position: absolute;
-    top:53%;
-    background-color: #8B51FE;
-    border: none;
-    border-radius: 1vw;
-    color: #fff;
-    font-size: 2vw;
-    font-weight: 600;
-    padding: 1.2vw 3vw;
-    cursor: pointer;
-    user-select: none;
-    font-family: 'Montserrat', sans-serif;
-    z-index: 1;
-    transition: all .2s ease-in-out;
-}
- #start-button:hover {
-    transition: all .2s ease-in-out;
-    color: #8B51FE;
-    background-color: #fff;
-    transform: skew(2deg, 1deg);
-}
- #start-button:active {
-    transition: all .2s ease-in-out;
-    transform: translate(0px);
-    background-color: #8B51FE;
-}
- #featured {
-    width: max-content;
-    height: 12vw;
-    z-index: 0;
-    overflow-y: hidden;
-}
- #featured .content {
-    width: 22.4vw;
-}
- #featured .item {
-    width: min-content;
-    height: 100%;
-    background-color: #1e71ee;
-    border-radius: 1vw;
-    transition: all .3s ease-in-out;
-}
- #games {
-    display: grid;
-    grid-template-columns: .1fr .1fr;
-    margin-left: .6vw;
-    gap:3vmin;
-    margin-bottom: 1.5vw;
-    animation: fadeIn .5s ease-in-out;
-}
- #games.mobile {
-    margin-top: 23vw;
-    grid-template-columns: 1fr;
-    gap:0vmin;
-}
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
- .game {
-    display: flex;
-    background-color: #222222;
-    padding: 1.25vw;
-    width: 46vw;
-    border-radius: 1vw;
-    overflow: hidden;
-}
- #games.mobile .game {
-    width: 93.5%;
-    margin: 1%;
-    border-radius: 2vw;
-    padding: 2vw;
-}
- .game #game-content {
-    margin-left: .8vw;
-    text-overflow: ellipsis;
-}
- .game h1 {
-    font-size: 2.8vw;
-    font-weight: 700;
-    margin-bottom: .5vw;
-}  
- #games.mobile .game h1 {
-    font-size: 6vw;
-}
- .game p {
-    font-size: 1.5vw;
-    width:34vw;
-    font-weight: 400;
-}
- #games.mobile .game p {
-    font-size: 3vw;
-    width: 60vw;
-}
- .game .img {
-    display: flex;
-    height: 10vw;
-    width: 10vw;
-    border-radius: 1vw;
-    user-select: none;
-    cursor: pointer;
-    transition: transform 0.1s linear;
-}
- #games.mobile .game .img {
-    width: 22vw;
-    height: 22vw;
-    border-radius: 3vw;
-    margin-right: 2vw;
-}
- .game .img:hover {
-    transform: scale(1.02);
-    transition: transform 0.1s linear;
-}
- .game .img .cover {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    backdrop-filter: blur(0);
-    border-radius: 1vw;
-    z-index: 1;
-    transition: backdrop-filter 0.25s linear;
-}
- .game .img:hover .cover s{
-    backdrop-filter: blur(0);
-    transition: backdrop-filter 0.25s linear;
-}
- .game #game-content button {
-    background-color: #222222;
-    border: 1px solid #fff;
-    border-radius: 1vw;
-    color: #fff;
-    font-size: 1.5vw;
-    font-weight: 600;
-    padding: .5vw 3vw;
-    margin-top: 1vw;
-    cursor: pointer;
-    transition: .2s;
-    margin-left:auto;
-    user-select: none;
-    font-family: 'Montserrat', sans-serif;
-    transition: .3s all ease;
-}
- #games.mobile .game #game-content button {
-    font-size: 5vw;
-    border-radius: 2vw;
-}
- .game #game-content button:hover {
-    transition: .3s all ease;
-    background-color: #fff;
-    color: #222222;
-}
- #navigation {
+
+nav {
     position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 9.5%;
-    backdrop-filter: blur(18px);
-    box-shadow: 0 0 40px rgba(255, 255, 255, 0.34);
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(10px) saturate(200%) brightness(70%);
+    color: #fff;
     display: flex;
+    height: 7vw;
+    width: 100%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: left;
     padding: 0 1%;
     z-index: 5;
-    margin:auto;
+    margin: auto;
 }
- #navigation.mobile {
-    backdrop-filter: 0;
-    background-color: #2b2b2bdc;
-    box-shadow: 0 0 40px rgba(66, 66, 66, 0.34);
-}
- #navigation.mobile .icons {
-    display: none;
-}
- #navigation h1 {
-    font-size: 2.8vw;
-    font-weight: 900;
-    text-transform: uppercase;
-    user-select: none;
-    cursor: pointer;
-}
- #navigation.mobile h1 {
-    display: none;
-}
- #navigation .mobile-icon {
-    display: none;
-    width: 18vw;
-    height: auto;
-}
- #navigation.mobile .mobile-icon {
-    display: block;
-}
- #navigation .icons {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 7.6%;
-    margin-right: 1.5vw;
-}
- #navigation.mobile .icons {
-    margin-right: 3.5vw;
-    width: 24%;
-}
- .icon {
-    font-size: 1.5vw;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
-    user-select: none;
-    z-index: 15;
-    background-color: #2c7ffc;
-    padding: .8vw 1vw;
+
+nav img {
+    height: 80%;
+    width: auto;
+    margin-right: 1%;
     border-radius: 1vw;
-    transition: .3s all ease;
-}
- #navigation.mobile .icon {
-    font-size: 7vw;
-    border-radius: 3vw;
-    padding: 1.3vw 2vw;
-}
- .icon:hover {
-    transition: .3s all ease;
-    color: #2c7ffc;
-    background-color: #fff;
-}
- #navigation h1 span {
-    color:#8B51FE;
-}
- #navigation .search {
-    position: absolute;
-    right: 3vw;
+    cursor: pointer;
     user-select: none;
+    box-shadow: 5px 5px 10px rgba(53, 53, 53, 0.459);
+}
+
+nav h1 {
+    font-size: 4vw;
+    font-weight: 800;
+    margin-right: 1%;
+}
+
+.content {
+    flex-direction: column;
+    align-items: left;
+    padding: 7vw;
+    padding-top: 0vw;
+}
+
+.content hr {
+    border: 0;
+    height: 4px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(255, 255, 255), rgba(0, 0, 0, 0));
+    margin: 1vw 0;
+}
+
+.search {
     display: flex;
+    user-select: none;
+    margin-top: 2.5vw;
+    margin-left: 1.2vw;
 }
- #navigation.mobile .search {
-    right:5vw;
-}
- #navigation #search {
-    background-color: #1d1d1db2;
+ 
+.search input {
+    background-color: #222222;
     border: none;
     border-radius: 1vw 0 0 1vw;
     color: #fff;
     font-size: 1.5vw;
     font-weight: 600;
-    padding: .8vw 1.5vw;
+    padding: 0.8vw 1.5vw;
     font-family: 'Montserrat', sans-serif;
     z-index: 1;
     outline: none;
 }
- #navigation.mobile #search {
-    font-size: 5.5vw;
-    border-radius: 2vw 0 0 2vw;
-    padding: 2vw 4vw;
-    width: 55vw;
+ 
+.search input::placeholder {
+    color: #fff;
+    font-weight: 600;
+    font-size: 1.5vw;
 }
- #navigation .search button {
-    background-color: #8B51FE;
+ 
+.search button {
+    background-color: #fff;
     border: none;
     border-radius: 0 1vw 1vw 0;
-    color: #fff;
+    color:#222222;
     font-size: 1.5vw;
     font-weight: 600;
-    padding: .8vw 1vw;
+    padding: 0.8vw 1vw;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
     z-index: 1;
     transition: .3s all ease;
 }
- #navigation.mobile .search button {
-    padding: 2vw 3vw;
-    font-size:4.2vw;
-    border-radius: 0 2vw 2vw 0;
+ 
+#games {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: .6vw;
+    padding-bottom: 5vw;
+
 }
- #navigation .search button:hover {
-    transition: .3s all ease;
-    background-color: #fff;
-    color: #000;
-}
- ::-webkit-scrollbar {
-    display: none;
-}
- #game-frame {
-    display: none;
-}
- #iframe {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width:100vw;
-    height:100vh;
-    z-index: 6;
-    border: none;
-    background-color: #222;
-}
- .controls {
-    position: fixed;
-    top:1vw;
-    left:1vw;
-    width: max-content;
-    z-index: 100;
-    background-color: rgba(255, 255, 255, 0.75);
-    border-radius: .5vw;
-    box-shadow: 0px 0px 10px #1a1a1a;
-}
- .controls.mobile {
-    border-radius: 2.5vw;
-    padding: 1.5vw;
-    top:1.5vw;
-    left:1.5vw;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px #1a1a1a;
-}
- .controls i {
-    color: rgba(0, 0, 0, 0.829);
-    font-size: 3vw;
-    padding: .5vw;
-    transition: .2s ease-in-out;
-    text-shadow: 0px 0px 10px #818181;
-}
- .controls.mobile i {
-    font-size: 12vw;
-}
- .controls i:hover {
-    color: rgba(0, 0, 0, 0.507);
-    font-size: 3vw;
-    padding: .5vw;
+ 
+#games img {    height: 15.6vw;
+    width: 15.6vw;
+    border-radius: 1vw;
+    margin: .5vw;
     cursor: pointer;
+    user-select: none;
+    transition: transform .2s;
 }
- #error {
-    text-align: center;
-    margin-top: 1.5vw;
-    font-size: 3vw;
-    font-weight: 600;
-    color: #fff;
-    display: none;
+ 
+#games img:hover {
+    transform: scale(1.01);
 }
- footer {
-    position: absolute;
-    width: 100%;
-    height: 30%;
-    z-index: 5;
-    margin:auto;
+
+.featured {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1vw;
+    margin:1%;
+    margin-top: 6vw;
 }
- footer.mobile {
-    display: none;
-}
- footer main {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    height: 30%;
-    width:60%;
-}
- footer main h1 {
-    font-size: 5vw;
-    font-weight: 900;
-    text-transform: uppercase;
-    text-align: center;
-}
- footer main h1 span {
-    color:#8B51FE;
-}
- footer main h2 {
-    text-align: center;
-    font-size: 1.5vw;
-    font-weight: 600;
-}
- footer main h2 span.one {
-    color:gold;
-    font-weight: 800;
-    font-size: 1.8vw;
-}
- footer main h2 span.two {
-    color:rgb(255, 55, 55);
+
+.featured h1 {
+    font-size: 3.5vw;
     font-weight: 700;
+    margin: 1vw 1vw .4vw 1vw;
+    width: 83.8%;
+    text-align: left;
+    color: #fff;
 }
- footer main p {
-    text-align: center;
-    margin-top: 2.5vw;
-    font-size: 1vw;
-    font-weight: 600;
+
+.featured .column {
+    display: flex;
+    flex-direction: column;
 }
+
+.featured img {
+    height: 12.5vw;
+    width: 12.5vw;
+    border-radius: 1vw;
+    margin: .5vw;
+    cursor: pointer;
+    user-select: none;
+    transition: all .2s;
+}
+
+.featured img:hover {
+    transform: scale(1.02);
+    filter: brightness(50%);
+}
+
+
+.featured .row img {
+    height: 26vw;
+    width: 26vw;
+}
+
+.featured a {
+    display: inline-block;
+    position: relative;
+    color: #2c7ffc;
+    text-decoration: none;
+}
+    
+    .featured .play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.2s;
+    }
+    
+    .featured a:hover .play-button {
+    opacity: 1;
+    pointer-events: none;
+    }
+    
+    .featured .play-button i {
+    font-size: 5vw;
+    text-shadow: 0 0 100px #2c7ffc;
+    }
