--- a/main.css
+++ b/main.css
@@ -184,12 +184,14 @@ nav h1 {
     text-shadow: 0 0 100px #2c7ffc;
     }
 
- footer {
-    position: absolute;
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
     width: 100%;
-    height: 30%;
-    z-index: 5;
-    margin:auto;
+    text-align: center; /* Center the text horizontally */
+    padding: 20px; /* Add padding for spacing */
+    z-index: 5; /* Ensure it's on top of other elements */
 }
  footer.mobile {
     display: none;
