--- a/main.css
+++ b/main.css
@@ -178,3 +178,29 @@ nav h1 {
     font-size: 5vw;
     text-shadow: 0 0 100px #2c7ffc;
     }
+#games .game-item {
+    position: relative;
+}
+
+#games .game-item:hover::before {
+    content: attr(data-name);
+    position: absolute;
+    bottom: 100%; /* Adjust this value to control the tooltip position */
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    display: block;
+    z-index: 1;
+    transition: opacity 0.3s, visibility 0.3s;
+    opacity: 0;
+    visibility: hidden;
+}
+
+#games .game-item:hover::before {
+    opacity: 1;
+    visibility: visible;
+}
+
