--- a/main.css
+++ b/main.css
@@ -182,25 +182,21 @@ nav h1 {
     position: relative;
 }
 
-#games .game-item:hover::before {
-    content: attr(data-name);
+#games .game-name {
     position: absolute;
-    bottom: 100%; /* Adjust this value to control the tooltip position */
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 5px;
     border-radius: 5px;
-    display: block;
+    display: none;
     z-index: 1;
-    transition: opacity 0.3s, visibility 0.3s;
-    opacity: 0;
-    visibility: hidden;
+    transition: opacity 0.3s;
 }
 
-#games .game-item:hover::before {
+#games .game-item:hover .game-name {
+    display: block;
     opacity: 1;
-    visibility: visible;
 }
-
